--- a/grid-away.html
+++ b/grid-away.html
@@ -83,7 +83,7 @@
                                     lacus quis
                                     mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
                             </div>
-                            <img class="fas fa-hippo align-self-center ml-3 w-25 ml-5" src="images/organization.png"
+                            <img class="align-self-center ml-3 w-25 ml-5" src="images/organization.png"
                                 alt="">
                         </div>
                         <div class="media w-50">
@@ -105,7 +105,7 @@
                                 lacus quis
                                 mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
                         </div>
-                        <img class="fas fa-hippo align-self-center ml-3 w-25 ml-5" src="images/organization.png" alt="">
+                        <img class="align-self-center ml-3 w-25 ml-5" src="images/organization.png" alt="">
                     </div>
                 </div>
         </div>
