--- a/gridaway.html
+++ b/gridaway.html
@@ -9,54 +9,254 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/grid-away.css">
 </head>
-<div class="container-fluid">
-    <div class="row bg-secondary px-5 py-2 mb-5 "> 
-    <div class="col">
-        <nav class="navbar navbar-expand-lg m-0">
-            <a class="navbar-brand bg-dark text-white p-2 ml-n2" href="#">THE LOGO</a>
-            <ul class="nav ml-auto p-0">
-                <li class="nav-item ">
-                    <a class="nav-link text-white" href="#">SUPPORT</a>
-                </li>
-                <li class="nav-item bg-dark rounded-pill">
-                    <a class="nav-link text-white" href="#">LOG IN</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-    <div class="row ">
-        <div class="col-lg-6  text-white my-5 ">
-            <h1 class="big-heading">Lorem ipsum dolor sit amet, consectetur</h1>
-            <p class="lead">
-                Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-            </p>
-            <ul class="pl-3">
-                <li>Integer molestie lorem at massa</li>
-                <li>Facilisis in pretium nisl aliquet</li>
-                <li>Nulla volutpat aliquam velit
-            </ul>
-            <button type="button" class="btn btn-danger btn-sm text-white rounded-pill px-3">
-                MAIN CTA BUTTON</button>
-            <button type="button" class="btn btn-light btn-sm text-white rounded-pill px-3"> LEARN MORE
-            </button>
-        </div>
-        <div class="col-lg-6">
-            <iframe src="images/airplane.png" frameborder="100" class="embed-responsive-item"></iframe>  </div>
-    </div>
-</div>
-
-
-
-
-
-
-</div>
 
 <body>
+    <div class="container-fluid">
+        <div class="bg-secondary px-5 py-2 mx-0 ">
+            <div class="row pl-5">
+                <div class="col mb-5">
+                    <nav class="navbar navbar-expand-lg m-0">
+                        <a class="navbar-brand bg-dark text-white p-2 ml-n2" href="#">THE LOGO</a>
+                        <ul class="nav ml-auto p-0">
+                            <li class="nav-item ">
+                                <a class="nav-link text-white" href="#">SUPPORT</a>
+                            </li>
+                            <li class="nav-item bg-dark rounded-pill">
+                                <a class="nav-link text-white" href="#">LOG IN</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="row pl-5">
+                <div class="col-lg-6  text-white my-5">
+                    <h1 class="big-heading">Lorem ipsum dolor sit amet, consectetur</h1>
+                    <p class="lead">
+                        Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                    </p>
+                    <ul class="pl-3">
+                        <li>Integer molestie lorem at massa</li>
+                        <li>Facilisis in pretium nisl aliquet</li>
+                        <li>Nulla volutpat aliquam velit
+                    </ul>
+                    <button type="button" class="btn btn-danger btn-sm text-white rounded-pill px-3">
+                        MAIN CTA BUTTON</button>
+                    <button type="button" class="btn btn-dark btn-sm text-white rounded-pill px-3"> LEARN MORE
+                    </button>
+                </div>
+                <div class="col-lg-6 text-center mb-5">
+                    <div class="embed-responsive embed-responsive-16by9 py-5">
+                        <iframe class="embed-responsive-item" width="560" height="315"
+                            src="https://www.youtube.com/embed/q76bMs-NwRk" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid my-3 px-5">
+            <nav class="navbar navbar-expand-lg pl-5">
+                <a class="navbar-brand bg-dark text-white ml-n3 p-2" href="#">THE LOGO</a>
+                <ul class="nav ml-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link text-secondary" href="#overview">Overview</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link text-secondary" href="#one-on-one">One-on-One</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link text-secondary" href="#testimonials">Testimonials</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link text-secondary" href="#more">More</a>
+                    </li>
+                    <li> <button type="button" class="btn btn-danger btn-sm text-white rounded-pill px-3">
+                            MAIN CTA BUTTON</button></li>
+                </ul>
+            </nav>
+        </div>
+        <hr>
+        <div class="container d-flex flex-column">
+            <div class="container py-5 d-flex flex-row pl-5" id="overview">
+                <div class="media m-2">
+                    <div class="col media-body">
+                        <h5 class="text-danger mt-0 mb-1">Lorem & Ipsum</h5>
+                        <h4>Lorem & Ipsum</h4>
+                        <p class="w-75">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
+                            interdum,
+                            lacus quis
+                            mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                    </div>
+                </div>
+                <div>
+                    <img class="mr-5 col" src="images/organization.png" style="width: 50%;" alt=""> </div>
+            </div>
+            <div class="container py-5 d-flex flex-row">
+                <div>
+                    <img class="mx-5 col" src="images/organization.png" style="width: 50%;" alt=""> </div>
+                <div class="media mx-5">
+                    <div class="col media-body">
+                        <h5 class="text-danger mt-0 mb-1">Lorem & Ipsum</h5>
+                        <h4>Lorem & Ipsum</h4>
+                        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
+                            interdum,
+                            lacus quis
+                            mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container py-5 d-flex flex-row pl-5">
+                <div class="media m-2">
+                    <div class="col media-body">
+                        <h5 class="text-danger mt-0 mb-1">Lorem & Ipsum</h5>
+                        <h4>Lorem & Ipsum</h4>
+                        <p class="w-75">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
+                            interdum,
+                            lacus quis
+                            mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                    </div>
+                </div>
+                <div>
+                    <img class="mr-5 col" src="images/organization.png" style="width: 50%;" alt=""> </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row m-5">
+            <div class="container mx-5" id="one-on-one">
+                <h1 class="text-secondary text-center mt-5 mb-4"> One-On-One</h1>
+                <div class="row justify-content-md-center">
+                    <div class="col">
+                        <div class="media">
+                            <div class="media-body">
+                                <h5 class="text-danger mt-0 mb-1">Lorem & Ipsum</h5>
+                                <h4>Lorem & Ipsum</h4>
+                                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum,
+                                    lacus quis
+                                    mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                            </div>
+                            <img class="align-self-center ml-3 w-25 ml-5" src="images/organization.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="media">
+                            <div class="media-body">
+                                <h5 class="text-danger mt-0 mb-1">Lorem & Ipsum</h5>
+                                <h4>Lorem & Ipsum</h4>
+                                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum,
+                                    lacus quis
+                                    mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                            </div>
+                            <img class="align-self-center ml-3 w-25 ml-5" src="images/organization.png" alt="">
+                        </div>
+                    </div>
+                    <div class="w-100"></div>
+                    <div class="col">
+                        <div class="media">
+                            <div class="media-body">
+                                <h5 class="text-danger mt-0 mb-1">Lorem & Ipsum</h5>
+                                <h4>Lorem & Ipsum</h4>
+                                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum,
+                                    lacus quis
+                                    mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                            </div>
+                            <img class="align-self-center ml-3 w-25 ml-5" src="images/organization.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="media">
+                            <div class="media-body">
+                                <h5 class="text-danger mt-0 mb-1">Lorem & Ipsum</h5>
+                                <h4>Lorem & Ipsum</h4>
+                                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum,
+                                    lacus quis
+                                    mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                            </div>
+                            <img class="align-self-center ml-3 w-25 ml-5" src="images/organization.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-
-
-
+        </div>
+        <hr>
+        <div class="row">
+            <div class="container justify-content-center mb-5 pl-5" id="testimonials">
+                <h1 class="text-secondary text-center p-5"> Testimonials</h1>
+                <div class="row justify-content-md-center">
+                    <div class="col col-lg-4 text-center text-secondary">
+                        <iframe class="embed-responsive-item" width="300" height="auto"
+                            src="https://www.youtube.com/embed/q76bMs-NwRk" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe> <h5>Lorem & Ipsum</h5><p>John Doe</p> </div>
+                            <div class="col col-lg-4 text-center text-secondary">
+                                <iframe class="embed-responsive-item" width="300" height="auto"
+                            src="https://www.youtube.com/embed/q76bMs-NwRk" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe> <h5>Lorem & Ipsum</h5><p>John Doe</p> </div>
+                            <div class="col col-lg-4 text-center text-secondary">
+                                <iframe class="embed-responsive-item" width="300" height="auto"
+                            src="https://www.youtube.com/embed/q76bMs-NwRk" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe> <h5>Lorem & Ipsum</h5><p>John Doe</p> </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="container d-flex flex-column" id="more">
+            <h1 class="text-secondary text-center p-5">Wait, there is more!</h1>
+            <div class="container py-5 d-flex flex-row pl-5">
+                <div class="media m-2">
+                    <div class="col media-body">
+                        <h5 class="text-danger mt-0 mb-1">Lorem & Ipsum</h5>
+                        <h4>Lorem & Ipsum</h4>
+                        <p class="w-75">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
+                            interdum,
+                            lacus quis
+                            mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                    </div>
+                </div>
+                <div>
+                    <img class="mr-5 col" src="images/organization.png" style="width: 50%;" alt=""> </div>
+            </div>
+            <div class="container py-5 d-flex flex-row">
+                <div>
+                    <img class="mx-5 col" src="images/organization.png" style="width: 50%;" alt=""> </div>
+                <div class="media mx-5">
+                    <div class="col media-body">
+                        <h5 class="text-danger mt-0 mb-1">Lorem & Ipsum</h5>
+                        <h4>Lorem & Ipsum</h4>
+                        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
+                            interdum,
+                            lacus quis
+                            mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container py-5 d-flex flex-row pl-5">
+                <div class="media m-2">
+                    <div class="col media-body">
+                        <h5 class="text-danger mt-0 mb-1">Lorem & Ipsum</h5>
+                        <h4>Lorem & Ipsum</h4>
+                        <p class="w-75">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
+                            interdum,
+                            lacus quis
+                            mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                    </div>
+                </div>
+                <div>
+                    <img class="mr-5 col" src="images/organization.png" style="width: 50%;" alt=""> </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row justify-content-center">
+            <div class="my-5 pl-5 col-md-3"><button type="button" class="btn btn-danger btn-lg text-white rounded-pill px-3 ">
+                A BIG CTA BUTTON</button>
+            <p class="">Lorem ipsum dolor sit amet,</p>
+        </div> </div>
+            <div class="container-fluid bg-dark p-5 m-0">
+                <p class="text-center text-white">Footer Text</p>
+            </div>
+    </div>
 </body>
 
 </html>
