--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="card text-center bg-white">
                     <img class="card-img-top mx-auto  w-25 m-3" src="images/tom-yum-goong.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title"> <a href=""> Grid Away</a></h5>
+                        <h5 class="card-title"> <a href="gridaway.html"> Grid Away</a></h5>
                        
                     </div>
                 </div>
